# uv-demo

./: README.md  pyproject.toml  requirements.txt  uv_guide.md
